# robo-agent

./: .gitignore  DEMO_SCRIPT.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  config.py  main.py  pyproject.toml
backend/data/docs/: hardware_components_guide.txt  isaac_lab_basics.txt  motor_selection_guide.txt  ros2_basics.txt  urdf_reference.txt
backend/graph/: llm.py  orchestrator.py  state.py
backend/graph/nodes/: code_utils.py  hardware.py  isaac.py  motor.py  ros2.py  structure.py  validator.py
backend/graph/tools/: math_engine.py  nexar.py  rag.py
backend/prompts/: hardware.md  isaac.md  motor.md  ros2.md  structure.md
backend/rag/: ingest.py  store.py
backend/routers/: export.py  project.py  step.py
backend/tests/: test_e2e.py  test_graph.py  test_math.py  test_nexar.py
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/steps/: layout.tsx
frontend/src/app/steps/hardware/: page.tsx
frontend/src/app/steps/motor/: page.tsx
frontend/src/app/steps/project/: page.tsx
frontend/src/app/steps/review/: page.tsx
frontend/src/app/steps/software/: page.tsx
frontend/src/components/: CodeViewer.tsx  FileTree.tsx  StaleWarning.tsx  StepChatPanel.tsx  StepLayout.tsx  StepNavButtons.tsx  StepperBar.tsx
frontend/src/hooks/: useSSE.ts
frontend/src/lib/: context.ts
frontend/src/stores/: chatStore.ts  hardwareStore.ts  motorStore.ts  pipelineStore.ts  projectStore.ts  softwareStore.ts  structureStore.ts
(+1 files in other folders)
